# flaticon

./: Makefile  pyproject.toml
docs/: index.md
flaticon/: flaticon.py  web_base.py
